welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: value Yellow is not a member of object java.awt.Color
	avance(4);setCouleurBrosse(Color.Yellow);baisseBrosse();leveBrosse();gauche();
                                         ^